RD | setup | added controllers for live static root and coffee compiler watchers.

--- a/app/server_configs/nginx.conf.template
+++ b/app/server_configs/nginx.conf.template
@@ -18,7 +18,7 @@ http {
         }
 
         location /static {
-            root <% this.static_root %>;
+            root /opt/ksc;
         }
     }
 }
